# improvado

./: README.md  docker-compose.yml  fabfile.py
server/: Dockerfile  pyproject.toml
server/api/urls/: v1.py
server/cities/: models.py  serializers.py  views.py
server/cities/migrations/: 0001_initial.py
server/server/: celery.py  settings.py  urls.py
server/weather/: filters.py  models.py  serializers.py  tasks.py  views.py
server/weather/migrations/: 0001_initial.py
